FEAT: add prediction

--- a/Lecture-Deep_Learning/02-linear_regression.ipynb
+++ b/Lecture-Deep_Learning/02-linear_regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQ8HNnXC4tkbxQE9PW0pBa",
+      "authorship_tag": "ABX9TyNjWrCBvWxZMoir6qhNiDoR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "h5nnkWsnSOj6",
-        "outputId": "d80276c5-7dc9-48ed-e6c0-a3e906f6e395"
+        "outputId": "683ec38c-fe2a-40ad-c153-1c1117d61442"
       },
       "outputs": [
         {
@@ -96,8 +96,9 @@
             "Epoch: 480 , Cost: 94.530708\n",
             "Epoch: 490 , Cost: 94.523468\n",
             "< After Train >\n",
-            "W =  tensor([0.9664], requires_grad=True)\n",
-            "b = tensor([0.1485], requires_grad=True)\n"
+            "W = tensor([0.9664], requires_grad=True)\n",
+            "b = tensor([0.1485], requires_grad=True)\n",
+            "My final predict socre is estimated as 68.765038\n"
           ]
         }
       ],
@@ -138,12 +139,12 @@
         "    print('Epoch: %d , Cost: %f' %(epoch, cost))\n",
         "\n",
         "print('< After Train >')\n",
-        "print('W = ', W)\n",
+        "print('W =', W)\n",
         "print('b =', b)\n",
         "\n",
-        "#new_input = 71\n",
-        "#predict = W * new_input + b\n",
-        "#print('My final predict socre is estimated as %f' %(predict))"
+        "new_input = 71\n",
+        "predict = W * new_input + b # H(x) = 0.9664x + 0.1485\n",
+        "print('My final predict socre is estimated as %f' %(predict))"
       ]
     }
   ]
