DOCS: add title

--- a/05-indexing_slicing_fancyIndexing_booleanMask.ipynb
+++ b/05-indexing_slicing_fancyIndexing_booleanMask.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+P3yKfJSVJMe3D+VrGsex",
+      "authorship_tag": "ABX9TyPWxm6raf5SpnE61k/kFEpI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/9-coding/PyTorch/blob/main/05-indexing_slicing_fancyIndexing_booleanMask.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Indexing / Slicing / Fancy Indexing / Boolean Mask"
+      ],
+      "metadata": {
+        "id": "AF8BS-iDQ1w4"
+      }
     },
     {
       "cell_type": "code",
