FIX: modify tf -> np text

--- a/03-translation_between_numpy_torch_tensorflow.ipynb
+++ b/03-translation_between_numpy_torch_tensorflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOs55flVwUxiAqmdpM5hPH8",
+      "authorship_tag": "ABX9TyOhox+JR9Ff1mePYnhCVv04",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/9-coding/PyTorch/blob/main/03_translation_between_numpy_torch_tensorflow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/9-coding/PyTorch/blob/main/03-translation_between_numpy_torch_tensorflow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "KnaD2g_gfDxm"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
         "id": "5DTc0OHLfJrI",
         "outputId": "5f5a9db4-615e-40d8-a496-88a2ebfd8cfb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,13 +89,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GqFuk0YFeebs",
-        "outputId": "020f33da-24d5-4991-969a-70c44d82fd30"
+        "outputId": "67754189-162a-4a17-9d63-2a1569d239d4"
       },
       "outputs": [
         {
@@ -158,7 +158,7 @@
         "id": "7Y7yXQDO-ujv",
         "outputId": "edf27743-0161-42ce-d6d8-19e5ae604b39"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +198,7 @@
         "id": "L5OPBzSW-yVI",
         "outputId": "297f9c64-1467-47f3-a9cd-9709bfa48ec5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,10 +233,24 @@
         "print(a_tf) # b_np에서 바꾼 값이 a_tf에 영향을 주지 않음."
       ],
       "metadata": {
-        "id": "8a9Z05VQ-znI"
+        "id": "8a9Z05VQ-znI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "36a9217e-1357-4a1a-eb92-50fc0584eb04"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4]\n",
+            "[  1   2 777   4]\n",
+            "tf.Tensor([1 2 3 4], shape=(4,), dtype=int32)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -255,8 +269,8 @@
         "\n",
         "**torch 변환 후 np 확인**\n",
         "\n",
-        "- torch.tensor(): 서로 영향X\n",
-        "- torch.from_numpy(): 서로 영향O\n",
+        "- `torch.tensor()`: 서로 영향X\n",
+        "- `torch.from_numpy()`: 서로 영향O\n",
         "\n",
         "**np 변환 후 torch 확인**\n",
         "\n",
@@ -265,9 +279,10 @@
         "### **TensorFlow**\n",
         "\n",
         "**tf 변환 후 np 확인**\n",
+        "-> immutable이므로 바꿀 수 없음.\n",
         "\n",
-        "- torch.tensor(): 서로 영향X\n",
-        "- torch.from_numpy(): 서로 영향O\n",
+        "- `tf.constant()`\n",
+        "- `tf.convert_to_tensor()`\n",
         "\n",
         "**np 변환 후 tf 확인**\n",
         "\n",
@@ -304,7 +319,7 @@
         "id": "SrxHF4lU_dRj",
         "outputId": "ca8b0ace-276a-40c3-f859-833a6e623e68"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +362,7 @@
         "id": "7AqFW6PZ_o4q",
         "outputId": "1c7f5be3-3c17-4bcc-d638-2a16b4cc2141"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,7 +394,7 @@
         "id": "n7jZ-F1u_p1e",
         "outputId": "cb7e4da3-bf51-4180-8bba-fa5dd66ecf1b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -417,7 +432,7 @@
         "id": "pyIPHlVH_ui9",
         "outputId": "7ab850b9-fc03-4865-ef75-32808e6b60a9"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
