--- a/03-translation_between_numpy_torch_tensorflow.ipynb
+++ b/03-translation_between_numpy_torch_tensorflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhox+JR9Ff1mePYnhCVv04",
+      "authorship_tag": "ABX9TyMEDvlrafzgoOfQC9/2NFYh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "KnaD2g_gfDxm"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -59,9 +59,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5DTc0OHLfJrI",
-        "outputId": "5f5a9db4-615e-40d8-a496-88a2ebfd8cfb"
+        "outputId": "0cc73458-d9fa-4a1f-d96f-b42d9c0ed354"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,6 +73,39 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 정리\n",
+        "\n",
+        "## tensor 생성\n",
+        "```\n",
+        "t = (1, 2, 3, 4)\n",
+        "a_np = np.array(t)\n",
+        "a_tf = tf.constant(t)\n",
+        "a_torch = torch.tensor(t)\n",
+        "```\n",
+        "## tf → numpy\n",
+        "- `np = np.array(a_tf)`: 서로 영향x\n",
+        "- `np = a_tf.numpy()`: 서로 영향x\n",
+        "\n",
+        "## torch → numpy\n",
+        "- `np = np.array(a_torch)`: 서로 영향x\n",
+        "- `np = a_torch.array`: 서로 영향(device=\"cpu\"에서만)\n",
+        "- `np = a_torch.numpy().copy()`: 서로 영향x\n",
+        "\n",
+        "## numpy → tf\n",
+        "- `tf = tf.constant(a_np)`: 서로 영향x\n",
+        "- `tf = tf.convert_to_tensor(a_np)`: 서로 영향x\n",
+        "\n",
+        "## numpy -> torch\n",
+        "- `torch = torch.tensor(a_np)`: 서로 영향x\n",
+        "- `torch = torch.from_numpy(a_np)`: 서로 영향"
+      ],
+      "metadata": {
+        "id": "IdNLEyJBO2Fp"
+      }
     },
     {
       "cell_type": "markdown",
@@ -89,13 +122,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GqFuk0YFeebs",
-        "outputId": "67754189-162a-4a17-9d63-2a1569d239d4"
+        "outputId": "3c43ad33-bd93-40a9-ac19-f0c838cb7903"
       },
       "outputs": [
         {
@@ -156,9 +189,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7Y7yXQDO-ujv",
-        "outputId": "edf27743-0161-42ce-d6d8-19e5ae604b39"
+        "outputId": "22f8838a-21e8-4777-9818-59c379c1a7db"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,6 +201,53 @@
             "[  1   2 777   4]\n",
             "tensor([  1,   2, 777,   4])\n",
             "[  1   2 777 888]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# torch 값 변환 후 np 확인\n",
+        "a_torch = torch.tensor(t) # 초기화\n",
+        "print(\"a_torch: \", a_torch)\n",
+        "c_np = np.array(a_torch)\n",
+        "print(\"c_np: \", c_np)\n",
+        "\n",
+        "print(\"\\n<c_np[2] = 777>\")\n",
+        "c_np[2] = 777\n",
+        "print(\"c_np: \", c_np)\n",
+        "print(\"a_torch: \", a_torch) # c_np에서 바꾼 값이 a_torch에 영향x.\n",
+        "\n",
+        "print(\"\\n<a_torch[3] = 888>\")\n",
+        "c_np[2] = 3\n",
+        "a_torch[3] = 888\n",
+        "print(\"a_torch: \", a_torch)\n",
+        "print(\"c_np: \", c_np) # a_torch에서 바꾼 값이 c_np에 영향x."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ooYbX_XwQUXq",
+        "outputId": "94f18cbf-13d3-4b37-e809-334fb3918ea2"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a_torch:  tensor([1, 2, 3, 4])\n",
+            "c_np:  [1 2 3 4]\n",
+            "\n",
+            "<c_np[2] = 777>\n",
+            "c_np:  [  1   2 777   4]\n",
+            "a_torch:  tensor([1, 2, 3, 4])\n",
+            "\n",
+            "<a_torch[3] = 888>\n",
+            "a_torch:  tensor([  1,   2,   3, 888])\n",
+            "c_np:  [1 2 3 4]\n"
           ]
         }
       ]
@@ -196,9 +276,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L5OPBzSW-yVI",
-        "outputId": "297f9c64-1467-47f3-a9cd-9709bfa48ec5"
+        "outputId": "8d3060b0-39d2-445a-8d21-e65771ee5d66"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,9 +317,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "36a9217e-1357-4a1a-eb92-50fc0584eb04"
+        "outputId": "c9ac6b7b-58fc-427b-d9ed-896391d14e10"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,6 +328,39 @@
             "[1 2 3 4]\n",
             "[  1   2 777   4]\n",
             "tf.Tensor([1 2 3 4], shape=(4,), dtype=int32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c_np = np.array(a_tf)\n",
+        "print(\"c_np: \", c_np)\n",
+        "\n",
+        "print(\"\\n<c_np[2] = 777>\")\n",
+        "c_np[2] = 777\n",
+        "print(\"c_np: \", c_np)\n",
+        "print(\"a_tf: \", a_tf)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pj65VykPSwC8",
+        "outputId": "7f6be71e-6029-4d17-b539-c16c622d6cb0"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "c_np:  [1 2 3 4]\n",
+            "\n",
+            "<c_np[2] = 777>\n",
+            "c_np:  [  1   2 777   4]\n",
+            "a_tf:  tf.Tensor([1 2 3 4], shape=(4,), dtype=int64)\n"
           ]
         }
       ]
@@ -317,9 +430,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SrxHF4lU_dRj",
-        "outputId": "ca8b0ace-276a-40c3-f859-833a6e623e68"
+        "outputId": "91602813-f570-45af-fa7b-4f96e35c5c43"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,9 +473,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7AqFW6PZ_o4q",
-        "outputId": "1c7f5be3-3c17-4bcc-d638-2a16b4cc2141"
+        "outputId": "fbec4eb8-e0cd-4bce-e857-1ce7467c2087"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,9 +505,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n7jZ-F1u_p1e",
-        "outputId": "cb7e4da3-bf51-4180-8bba-fa5dd66ecf1b"
+        "outputId": "f6d9994a-f679-4086-8841-8a9ff992858a"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,9 +543,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pyIPHlVH_ui9",
-        "outputId": "7ab850b9-fc03-4865-ef75-32808e6b60a9"
+        "outputId": "22e40c38-0e8e-4889-c3b4-b3edc244da64"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
