FEAT: add a little bit of explanation

--- a/04-changing_dtype_shape.ipynb
+++ b/04-changing_dtype_shape.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDFlmMaEOvar1acRbKi3So",
+      "authorship_tag": "ABX9TyM8tu+6EOt2MfXC2iWGG+qW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/9-coding/PyTorch/blob/main/04_changing_dtype_shape.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/9-coding/PyTorch/blob/main/04-changing_dtype_shape.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "O3yyVvtthhwA"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -59,9 +59,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PUMHHNQghml8",
-        "outputId": "08f3de8e-81e8-4204-afc1-8ebcae65b136"
+        "outputId": "5199cf49-b0e9-47f3-9a3d-ce19f8e21b9d"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "VwbagjDcAUBY"
       },
@@ -97,24 +97,38 @@
         "\n",
         "**dtype: The data type of element**\n",
         "\n",
-        "바꾸는 원본 tensor인스턴스를 기반으로 원하는 dtype로 구성된 새로운 tensor인스턴스가 생성됨 (연결X)\n",
+        "바꾸는 원본 tensor인스턴스를 기반으로 원하는 dtype으로 구성된 새로운 tensor인스턴스가 생성됨 (연결X)\n",
         "\n",
         "### numpy\n",
-        "\n",
+        "dtype 이름만으로 사용 가능.\n",
         "- `ndarray.astype(desired_dtype)`\n",
-        "- `np.uint8(src_array)`\n",
+        "  - ex) a_float = a_np.astype('float32')\n",
+        "- `np.desired_dtype(src_array)`\n",
+        "  - ex) a_int = np.int32(a_np)\n",
         "\n",
         "### pytorch\n",
-        "\n",
+        "torch.dtype 형식\n",
         "- `torch.tensor.type(desired_dtype)`\n",
+        "  - ex) a_float = a_torch.type(torch.float64)\n",
         "- `tensor.to(desired_dtype)`\n",
+        "  - ex) a_int = a_torch.to(torch.int32)\n",
         "\n",
         "### tensorflow\n",
-        "\n",
-        "- `tensorflow.dtypes.cast(src_tensor, desired_dtype)`"
+        "tf.dtype 형식\n",
+        "- `tensorflow.dtypes.cast(src_tensor, desired_dtype)`\n",
+        "  - ex) a_float = tf.dtypes.casts(a_tf, tf.float64)"
       ],
       "metadata": {
         "id": "xg3hl_bLho9O"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### NumPy"
+      ],
+      "metadata": {
+        "id": "HFPEMLl1DfgI"
       }
     },
     {
@@ -123,20 +137,22 @@
         "a = np.ones((3,3))\n",
         "b = np.uint8(a)\n",
         "c = a.astype('float32')\n",
+        "d = np.int32(a)\n",
         "print(c)\n",
         "\n",
         "print(id(a),a.dtype)\n",
         "print(id(b),b.dtype)\n",
-        "print(id(c),c.dtype)"
+        "print(id(c),c.dtype)\n",
+        "print(id(d),d.dtype)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "43R2We41hq3-",
-        "outputId": "1670d329-75bd-4a47-ed7f-5b10e7692130"
+        "outputId": "72a17e8e-9fbf-4a23-a698-05c6255b7faf"
       },
-      "execution_count": 4,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,9 +161,10 @@
             "[[1. 1. 1.]\n",
             " [1. 1. 1.]\n",
             " [1. 1. 1.]]\n",
-            "140536783614672 float64\n",
-            "140536783614768 uint8\n",
-            "140531646361936 float32\n"
+            "140324546677616 float64\n",
+            "140324546678768 uint8\n",
+            "140324512719440 float32\n",
+            "140324548060880 int32\n"
           ]
         }
       ]
@@ -155,18 +172,69 @@
     {
       "cell_type": "code",
       "source": [
+        "a[1][1] = 0\n",
+        "print(a, end=\"\\n\\n\")\n",
+        "\n",
+        "# 영향x\n",
+        "print(b)\n",
+        "print(c)\n",
+        "print(d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p71QZhM0DkJ4",
+        "outputId": "c7d10d74-bbb9-414b-d40e-4fdb77885651"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1. 1. 1.]\n",
+            " [1. 0. 1.]\n",
+            " [1. 1. 1.]]\n",
+            "\n",
+            "[[1 1 1]\n",
+            " [1 1 1]\n",
+            " [1 1 1]]\n",
+            "[[1. 1. 1.]\n",
+            " [1. 1. 1.]\n",
+            " [1. 1. 1.]]\n",
+            "[[1 1 1]\n",
+            " [1 1 1]\n",
+            " [1 1 1]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Torch\n",
+        "(type이 float32이면 tensor 출력시 dtype을 따로 출력하지 않음.)"
+      ],
+      "metadata": {
+        "id": "XeWvMn0wiIPq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "print(a_torch.dtype)\n",
         "print(a_torch.to(dtype = torch.float32)) # to: dtype을 어딘가로 보냄.\n",
-        "print(a_torch.dtype)"
+        "print(a_torch.dtype) # 연결x"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tzohm344htwn",
-        "outputId": "ec06280d-2e1f-432c-91da-1df6353dffef"
+        "outputId": "d3986f19-9ec5-4fd3-9f6e-18e1850519e6"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,15 +248,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "### Torch"
-      ],
-      "metadata": {
-        "id": "XeWvMn0wiIPq"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "a_torch = torch.rand(3,4)\n",
@@ -197,7 +256,7 @@
         "\n",
         "print(a_torch)\n",
         "print(b_torch)\n",
-        "print(c_torch)\n",
+        "print(c_torch, end=\"\\n\\n\")\n",
         "print(id(a_torch), a_torch.dtype)\n",
         "print(id(b_torch), b_torch.dtype)\n",
         "print(id(c_torch), c_torch.dtype)\n",
@@ -205,45 +264,49 @@
         "b_torch[0,1] = 9\n",
         "c_torch[0,0] = 1000\n",
         "print()\n",
-        "print(a_torch)\n",
-        "print(b_torch)\n",
-        "print(c_torch) # b_torch와 c_torch의 값을 바꿔도 a_torch의 값이 변하지 않음."
+        "print(\"b_torch: \\n\", b_torch)\n",
+        "print(\"c_torch: \\n\", c_torch)\n",
+        "print(\"a_torch: \\n\", a_torch) # b_torch와 c_torch의 값을 바꿔도 a_torch의 값이 변하지 않음."
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Iax_EUkiHFm",
-        "outputId": "cb56e307-b6cb-4054-e32c-51fd0f15618e"
+        "outputId": "3310e47d-f7bf-4b43-8739-91ed5dc5a86e"
       },
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[0.9012, 0.9598, 0.0884, 0.3977],\n",
-            "        [0.6745, 0.2790, 0.0779, 0.5111],\n",
-            "        [0.9498, 0.9450, 0.5527, 0.2526]])\n",
+            "tensor([[0.9889, 0.7115, 0.1673, 0.6618],\n",
+            "        [0.4739, 0.6860, 0.3276, 0.4921],\n",
+            "        [0.6148, 0.0571, 0.5319, 0.7147]])\n",
             "tensor([[0, 0, 0, 0],\n",
             "        [0, 0, 0, 0],\n",
             "        [0, 0, 0, 0]], dtype=torch.uint8)\n",
-            "tensor([[0.9012, 0.9598, 0.0884, 0.3977],\n",
-            "        [0.6745, 0.2790, 0.0779, 0.5111],\n",
-            "        [0.9498, 0.9450, 0.5527, 0.2526]], dtype=torch.float64)\n",
-            "140533210271152 torch.float32\n",
-            "140533210270832 torch.uint8\n",
-            "140533210280512 torch.float64\n",
+            "tensor([[0.9889, 0.7115, 0.1673, 0.6618],\n",
+            "        [0.4739, 0.6860, 0.3276, 0.4921],\n",
+            "        [0.6148, 0.0571, 0.5319, 0.7147]], dtype=torch.float64)\n",
             "\n",
-            "tensor([[0.9012, 0.9598, 0.0884, 0.3977],\n",
-            "        [0.6745, 0.2790, 0.0779, 0.5111],\n",
-            "        [0.9498, 0.9450, 0.5527, 0.2526]])\n",
-            "tensor([[0, 9, 0, 0],\n",
+            "140324551670768 torch.float32\n",
+            "140324836316384 torch.uint8\n",
+            "140324551727584 torch.float64\n",
+            "\n",
+            "b_torch: \n",
+            " tensor([[0, 9, 0, 0],\n",
             "        [0, 0, 0, 0],\n",
             "        [0, 0, 0, 0]], dtype=torch.uint8)\n",
-            "tensor([[1.0000e+03, 9.5976e-01, 8.8353e-02, 3.9766e-01],\n",
-            "        [6.7447e-01, 2.7896e-01, 7.7905e-02, 5.1112e-01],\n",
-            "        [9.4979e-01, 9.4501e-01, 5.5273e-01, 2.5259e-01]], dtype=torch.float64)\n"
+            "c_torch: \n",
+            " tensor([[1.0000e+03, 7.1151e-01, 1.6735e-01, 6.6179e-01],\n",
+            "        [4.7392e-01, 6.8599e-01, 3.2756e-01, 4.9210e-01],\n",
+            "        [6.1477e-01, 5.7141e-02, 5.3190e-01, 7.1466e-01]], dtype=torch.float64)\n",
+            "a_torch: \n",
+            " tensor([[0.9889, 0.7115, 0.1673, 0.6618],\n",
+            "        [0.4739, 0.6860, 0.3276, 0.4921],\n",
+            "        [0.6148, 0.0571, 0.5319, 0.7147]])\n"
           ]
         }
       ]
@@ -262,6 +325,7 @@
       "source": [
         "a_tf = tf.random.uniform(shape=(3,4))\n",
         "c_tf = tf.dtypes.cast(a_tf,tf.float64)\n",
+        "print(a_tf)\n",
         "print(c_tf)\n",
         "print(id(a_tf), a_tf.dtype)\n",
         "print(id(c_tf), c_tf.dtype)"
@@ -271,20 +335,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lQh7EW3GiNv2",
-        "outputId": "16be015e-ebdd-4d13-fbe9-ab0c7f93f6ee"
+        "outputId": "fabbc3b1-efce-47b9-b6a2-3f5cd534dd43"
       },
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "tf.Tensor(\n",
-            "[[0.74271929 0.40627432 0.20696175 0.51956022]\n",
-            " [0.50978422 0.6868403  0.20246887 0.72943413]\n",
-            " [0.80793452 0.15891683 0.66476834 0.75395751]], shape=(3, 4), dtype=float64)\n",
-            "140537210747568 <dtype: 'float32'>\n",
-            "140531646506688 <dtype: 'float64'>\n"
+            "[[0.48520315 0.7671863  0.5304713  0.9550866 ]\n",
+            " [0.16791809 0.13852668 0.94590735 0.0984906 ]\n",
+            " [0.1073997  0.76407945 0.77132523 0.10747445]], shape=(3, 4), dtype=float32)\n",
+            "tf.Tensor(\n",
+            "[[0.48520315 0.76718628 0.53047132 0.95508659]\n",
+            " [0.16791809 0.13852668 0.94590735 0.0984906 ]\n",
+            " [0.1073997  0.76407945 0.77132523 0.10747445]], shape=(3, 4), dtype=float64)\n",
+            "140324815894336 <dtype: 'float32'>\n",
+            "140324815893456 <dtype: 'float64'>\n"
           ]
         }
       ]
@@ -296,43 +364,54 @@
         "\n",
         "- shape는 tensor의 각 축의 크기를 나타내는 sequence type의 인스턴스임.\n",
         "- 즉, tensor의 크기와 형태를 나타냄.\n",
+        "- desired_shape은 튜플 형태로.\n",
+        "- 메모리가 contiguous해야 view를 만들 수 있음.\n",
+        "- transpose는 행렬을 바꿔놓기 때문에 일정하게 쭉 올라가던 메모리에서 순서가 꼬이게 됨. <br>is_contiguous 사용하면 인접한지 확인할 수 있음.\n",
+        "\n",
         "\n",
         "### numpy\n",
-        "\n",
+        "같은 행렬에서 reshape로 얻은 행렬의 경우 서로에게 영향을 미침.\n",
         "- `numpy.reshape(src_ndarray, desired_shape)`\n",
         "- `numpy.array.reshape(desired_shape)`\n",
         "\n",
         "### pytorch\n",
-        "\n",
+        "같은 행렬에서 reshape로 얻은 행렬의 경우 서로에게 영향을 미침.\n",
         "- `torch.reshape(src_tensor, desired_shape)`\n",
         "- `torch.tensor.reshape(desired_shape)`\n",
         "\n",
         "### tensorflow\n",
-        "\n",
+        "reshape로 얻어도 영향 없음.<br>\n",
+        "src_tensor.reshape(desired_shape) 방식은 작동X.\n",
         "- `tensorflow.reshape(src_tensor, desired_shape)`\n",
-        "\n",
-        "메모리가 contiguous해야 view를 만들 수 있음.\n",
-        "\n",
-        "transpose는 행렬을 바꿔놓기 때문에 일정하게 쭉 올라가던 메모리에서 순서가 꼬이게 됨. is_contiguous 사용하면 인접한지 확인할 수 있음.\n",
-        "\n",
-        "<br>\n",
-        "\n",
-        "### numpy"
+        "\n"
       ],
       "metadata": {
         "id": "ju-7cj25iOq_"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "### numpy"
+      ],
+      "metadata": {
+        "id": "5Hq3iazhJjMP"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "a = np.arange(0,10,1) # [ s:e :step_size]\n",
+        "a = np.arange(0,10,1) # [ s : e : step_size ]\n",
         "b = a.reshape((2,5))\n",
         "print(a.shape,id(a))\n",
         "print(b.shape,id(b))\n",
         "c = np.reshape(a,(5,2))\n",
-        "print(c.shape,id(c))\n",
+        "print(c.shape,id(c), end=\"\\n\\n\")\n",
+        "\n",
         "c[0,0] = 1000\n",
+        "# 같은 행렬에서 reshape로 얻은 행렬의 경우 서로에게 영향을 미침.\n",
         "print(a)\n",
         "print(b)\n",
         "print(c)"
@@ -342,17 +421,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "99eyFGDNiQ_9",
-        "outputId": "44f50dff-0a94-4cd2-a3f9-7b45a9107b39"
+        "outputId": "4bb0b717-53f2-4edb-d5d8-139ed62d0ad7"
       },
-      "execution_count": 9,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(10,) 140531646363568\n",
-            "(2, 5) 140531380548496\n",
-            "(5, 2) 140531380543696\n",
+            "(10,) 140324551552592\n",
+            "(2, 5) 140324551719792\n",
+            "(5, 2) 140324549838960\n",
+            "\n",
             "[1000    1    2    3    4    5    6    7    8    9]\n",
             "[[1000    1    2    3    4]\n",
             " [   5    6    7    8    9]]\n",
@@ -379,12 +459,14 @@
       "source": [
         "a_torch = torch.arange(0,10,1)\n",
         "b_torch = a_torch.reshape((2,5))\n",
+        "c_torch = torch.reshape(a_torch,(5,2))\n",
+        "\n",
         "print(a_torch.shape,id(a_torch))\n",
         "print(b_torch.shape,id(b_torch))\n",
-        "c_torch = torch.reshape(a_torch,(5,2))\n",
-        "print(c_torch.shape,id(c_torch))\n",
-        "c_torch[0,0] = 1000\n",
+        "print(c_torch.shape,id(c_torch), end=\"\\n\\n\")\n",
         "\n",
+        "c_torch[0,0] = 1000\n",
+        "# 같은 행렬에서 reshape로 얻은 행렬의 경우 서로에게 영향을 미침.\n",
         "print(a_torch)\n",
         "print(b_torch)\n",
         "print(c_torch)"
@@ -394,17 +476,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V0dBximWibVL",
-        "outputId": "0ae87ac8-a045-4248-9428-14339ceedad9"
+        "outputId": "a861eaf8-f330-4905-a885-8b5bb3d8f4a3"
       },
-      "execution_count": 10,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch.Size([10]) 140531380809984\n",
-            "torch.Size([2, 5]) 140531380808944\n",
-            "torch.Size([5, 2]) 140531380602656\n",
+            "torch.Size([10]) 140324551668768\n",
+            "torch.Size([2, 5]) 140324551659888\n",
+            "torch.Size([5, 2]) 140324548612944\n",
+            "\n",
             "tensor([1000,    1,    2,    3,    4,    5,    6,    7,    8,    9])\n",
             "tensor([[1000,    1,    2,    3,    4],\n",
             "        [   5,    6,    7,    8,    9]])\n",
@@ -436,7 +519,7 @@
         "print(b_tensor.shape,id(b_tensor))\n",
         "\n",
         "c_tensor = tf.reshape(a_tensor,(5,2))\n",
-        "print(c_tensor.shape,id(c_tensor))\n",
+        "print(c_tensor.shape,id(c_tensor), end=\"\\n\\n\")\n",
         "\n",
         "# 변경하고 싶은 위치와 값을 정의\n",
         "indices = tf.constant([[0, 0]]) # (2, 2) 위치를 변경하고자 함\n",
@@ -444,7 +527,7 @@
         "\n",
         "# 업데이트 적용\n",
         "c_tensor = tf.tensor_scatter_nd_update(c_tensor, indices, updates)\n",
-        "\n",
+        "# 값을 바꾸어도 영향 없음.\n",
         "print(a_tensor)\n",
         "print(b_tensor)\n",
         "print(c_tensor)"
@@ -454,17 +537,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1OFmedm1idzC",
-        "outputId": "c8ebf91e-9bc9-4f5e-fd5d-e91a4eaf8c60"
+        "outputId": "a7f502cd-c580-4979-cf5c-c98c403b0333"
       },
-      "execution_count": 11,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(10,) 140531646511792\n",
-            "(2, 5) 140531652537936\n",
-            "(5, 2) 140531646508448\n",
+            "(10,) 140324512597616\n",
+            "(2, 5) 140324514566688\n",
+            "(5, 2) 140324514565632\n",
+            "\n",
             "tf.Tensor([0 1 2 3 4 5 6 7 8 9], shape=(10,), dtype=int32)\n",
             "tf.Tensor(\n",
             "[[0 1 2 3 4]\n",
