--- a/06-vectorized_operation.ipynb
+++ b/06-vectorized_operation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjybCJfCW4Gai5nMMOJp7A",
+      "authorship_tag": "ABX9TyPy0kzWWkOF0uiCg1SZQgpv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "Spj4-udWJGBx"
       },
@@ -68,7 +68,7 @@
         "id": "H2-s5BNZJ4QP",
         "outputId": "383d0dd2-a2bb-4f6e-e385-4c7fcaa5d23d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
         "id": "32tDbs8jLBBC",
         "outputId": "854cfce1-aa0a-47b5-d38b-9bd19a6fc6f4"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "id": "s8a6SxQYLCNj",
         "outputId": "e96fec3c-10ae-4149-d3f3-28f9aba0f23e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 사칙연산"
+        "## 사칙연산\n",
+        "\n",
+        "일반적인 파이썬 코드와 같음.\n",
+        "- Addition: +\n",
+        "- Multiplication: *\n",
+        "- Subtraction: -\n",
+        "- Division: /\n",
+        "- Negation: -"
       ],
       "metadata": {
         "id": "7OqlyMdRMbFQ"
@@ -188,9 +195,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S_OOOiNvMZxN",
-        "outputId": "7c52d7ba-122b-4d99-c049-c99223ee0111"
+        "outputId": "431adccd-b037-442f-8aff-7105075e79b2"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +229,7 @@
         "id": "PZfLsUR5MhXw",
         "outputId": "27d8de1c-04d2-4f3e-b4cd-69673dfac8c0"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,7 +268,7 @@
         "id": "G-lY7SCnM6aI",
         "outputId": "e2412855-d70b-46d7-cf41-85a0930f9d8a"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,7 +307,7 @@
         "id": "moqSX2ntM6gf",
         "outputId": "137b2263-9291-4dd4-f8dc-f22633539ee9"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +346,7 @@
         "id": "ORlL2reUM6kT",
         "outputId": "c5425db5-7bcb-4ae9-b2bd-a8c9c78e5c57"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,7 +385,7 @@
         "id": "WLeC2fhdM6nh",
         "outputId": "bb06c7a7-e93e-47bd-c5df-9c7de4a14792"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +408,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Power & Exponentiation"
+        "## Power & Exponentiation\n",
+        "\n",
+        "### Power\n",
+        "$x^a$\n",
+        "- `a**2`\n",
+        "- `np.square(a)`\n",
+        "- `np.power(a, 2)`\n",
+        "- `torch.pow(a, 2)`\n",
+        "- `tf.pow(a, 2)`\n",
+        "- `pow()` 또는 `power()`의 경우 2 대신 다른 값을 넣으면 지수로 사용할 수 있음.\n",
+        "\n",
+        "### Exponential\n",
+        "$e^x$&ensp;밑이 e인 지수\n",
+        "- `np.exp(a)`\n",
+        "- `torch.exp(a)`\n",
+        "- `tf.exp(a)`\n",
+        "\n",
+        "$2^x$&ensp;밑이 2인 지수\n",
+        "- `np.exp2(a)`\n",
+        "- `torch.exp2(a)`\n",
+        "- `c_tf = tf.pow(2.,a_tf)`: exp 지원x\n",
+        "\n",
+        "$a^x$&ensp;밑이 3 이상인 지수\n",
+        "- `np.power(3, a)`\n",
+        "- `torch.pow(3, a_t)`\n",
+        "- `tf.pow(3,a_tf)`\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "GzsfuFxcNLNl"
@@ -426,7 +460,7 @@
         "id": "BY11ofhmNvA6",
         "outputId": "bd9d1b13-0638-482e-d407-bfa7c6cf5062"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,9 +498,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PqJrHvDNNvEQ",
-        "outputId": "2e0cc2d3-d241-49ed-b241-4f867d0e627c"
+        "outputId": "33a7bd3d-deb3-4f7c-9bce-8eb5cf22efbf"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,12 +529,16 @@
       "source": [
         "# exponential\n",
         "\n",
+        "# 밑이 e인 지수\n",
         "c = np.exp(a)\n",
         "print(c)\n",
         "c_t = torch.exp(a_t)\n",
         "print(c_t)\n",
         "c_tf = tf.exp(a_tf)\n",
         "print(c_tf)\n",
+        "\n",
+        "# 밑이 2인 지수\n",
+        "print()\n",
         "c = np.exp2(a)\n",
         "print(c)\n",
         "c_t = torch.exp2(a_t)\n",
@@ -508,6 +546,15 @@
         "# c_tf = tf.exp2(a_tf) # not working\n",
         "# print(c_tf)\n",
         "c_tf = tf.pow(2.,a_tf)\n",
+        "print(c_tf)\n",
+        "\n",
+        "# 밑이 3 이상인 지수\n",
+        "print()\n",
+        "c = np.power(3, a)\n",
+        "print(c)\n",
+        "c_t = torch.pow(3, a_t)\n",
+        "print(c_t)\n",
+        "c_tf = tf.pow(3,a_tf)\n",
         "print(c_tf)"
       ],
       "metadata": {
@@ -515,9 +562,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qzwIRFwZNvH_",
-        "outputId": "629c2a5a-607c-4b93-c244-32cf3a8e9d24"
+        "outputId": "3fd9f550-6c47-4d39-92b6-2eff862c1bb6"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,6 +580,7 @@
             "[[  1.          2.7182817]\n",
             " [  7.389056   20.085537 ]\n",
             " [ 54.59815   148.41316  ]], shape=(3, 2), dtype=float32)\n",
+            "\n",
             "[[ 1.  2.]\n",
             " [ 4.  8.]\n",
             " [16. 32.]]\n",
@@ -542,7 +590,18 @@
             "tf.Tensor(\n",
             "[[ 1.  2.]\n",
             " [ 4.  8.]\n",
-            " [16. 32.]], shape=(3, 2), dtype=float32)\n"
+            " [16. 32.]], shape=(3, 2), dtype=float32)\n",
+            "\n",
+            "[[  1.   3.]\n",
+            " [  9.  27.]\n",
+            " [ 81. 243.]]\n",
+            "tensor([[  1.,   3.],\n",
+            "        [  9.,  27.],\n",
+            "        [ 81., 243.]])\n",
+            "tf.Tensor(\n",
+            "[[  1.   3.]\n",
+            " [  9.  27.]\n",
+            " [ 81. 243.]], shape=(3, 2), dtype=float32)\n"
           ]
         }
       ]
@@ -550,7 +609,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Log"
+        "## Log\n",
+        "\n",
+        "$\\ln$\n",
+        "- `np.log(a)`\n",
+        "- `torch.log(a)`\n",
+        "- `tf.math.log(a)`\n",
+        "\n",
+        "$\\log_2$\n",
+        "- `np.log2(a)`\n",
+        "- `torch.log2(a)`\n",
+        "- `tf.experimental.numpy.log2(a)`\n",
+        "\n",
+        "$\\log_{10}$\n",
+        "- `np.log10(a)`\n",
+        "- `torch.log10(a)`\n",
+        "- `tf.experimental.numpy.log10(a)`"
       ],
       "metadata": {
         "id": "EwitcwQGSNPr"
@@ -559,12 +633,16 @@
     {
       "cell_type": "code",
       "source": [
+        "# 밑이 e인 로그\n",
         "c = np.log(a)\n",
         "print(c)\n",
         "c_t = torch.log(a_t)\n",
         "print(c_t)\n",
         "c_tf = tf.math.log(a_tf)\n",
         "print(c_tf)\n",
+        "print()\n",
+        "\n",
+        "# 밑이 2인 로그\n",
         "c = np.log2(a)\n",
         "print(c)\n",
         "c_t = torch.log2(a_t)\n",
@@ -573,6 +651,9 @@
         "# print(c_tf)\n",
         "c_tf = tf.experimental.numpy.log2(a_tf)\n",
         "print(c_tf)\n",
+        "print()\n",
+        "\n",
+        "# 밑이 10인 로그\n",
         "c = np.log10(a)\n",
         "print(c)\n",
         "c_t = torch.log10(a_t)\n",
@@ -580,16 +661,17 @@
         "# c_tf = tf.math.log10(a_tf) # not working\n",
         "# print(c_tf)\n",
         "c_tf = tf.experimental.numpy.log10(a_tf)\n",
-        "print(c_tf)"
+        "print(c_tf)\n",
+        "print()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3MNnqyq5SQB0",
-        "outputId": "e87c1eb9-f01b-4aaf-f227-aee675aad328"
+        "outputId": "19b6c7f0-ccf6-448e-aab4-0d86d958dc92"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,6 +687,7 @@
             "[[     -inf 0.       ]\n",
             " [0.6931472 1.0986123]\n",
             " [1.3862944 1.609438 ]], shape=(3, 2), dtype=float32)\n",
+            "\n",
             "[[     -inf 0.       ]\n",
             " [1.        1.5849625]\n",
             " [2.        2.321928 ]]\n",
@@ -615,6 +698,7 @@
             "[[     -inf 0.       ]\n",
             " [1.        1.5849625]\n",
             " [2.        2.321928 ]], shape=(3, 2), dtype=float32)\n",
+            "\n",
             "[[      -inf 0.        ]\n",
             " [0.30103    0.47712123]\n",
             " [0.60206    0.69897   ]]\n",
@@ -624,18 +708,19 @@
             "tf.Tensor(\n",
             "[[      -inf 0.        ]\n",
             " [0.30102998 0.47712126]\n",
-            " [0.60205996 0.69897   ]], shape=(3, 2), dtype=float32)\n"
+            " [0.60205996 0.69897   ]], shape=(3, 2), dtype=float32)\n",
+            "\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-46-686d63d418b2>:1: RuntimeWarning: divide by zero encountered in log\n",
+            "<ipython-input-27-bb1c3fd4992a>:2: RuntimeWarning: divide by zero encountered in log\n",
             "  c = np.log(a)\n",
-            "<ipython-input-46-686d63d418b2>:7: RuntimeWarning: divide by zero encountered in log2\n",
+            "<ipython-input-27-bb1c3fd4992a>:11: RuntimeWarning: divide by zero encountered in log2\n",
             "  c = np.log2(a)\n",
-            "<ipython-input-46-686d63d418b2>:15: RuntimeWarning: divide by zero encountered in log10\n",
+            "<ipython-input-27-bb1c3fd4992a>:22: RuntimeWarning: divide by zero encountered in log10\n",
             "  c = np.log10(a)\n"
           ]
         }
@@ -655,9 +740,9 @@
       "source": [
         "c = np.sqrt(a)\n",
         "print(c)\n",
-        "c_t = np.sqrt(a_t)\n",
+        "c_t = torch.sqrt(a_t)\n",
         "print(c_t)\n",
-        "c_tf = np.sqrt(a_tf)\n",
+        "c_tf = tf.sqrt(a_tf)\n",
         "print(c_tf)"
       ],
       "metadata": {
@@ -665,9 +750,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "svLSD3idX02m",
-        "outputId": "897dedb3-1019-42d1-aafe-6e9f35543822"
+        "outputId": "ebe0fbb2-ee3f-4059-9801-4dc2f7d53580"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,9 +764,10 @@
             "tensor([[0.0000, 1.0000],\n",
             "        [1.4142, 1.7321],\n",
             "        [2.0000, 2.2361]])\n",
+            "tf.Tensor(\n",
             "[[0.        1.       ]\n",
             " [1.4142135 1.7320508]\n",
-            " [2.        2.236068 ]]\n"
+            " [2.        2.236068 ]], shape=(3, 2), dtype=float32)\n"
           ]
         }
       ]
@@ -716,7 +802,7 @@
         "id": "tIE_2WPBYH7o",
         "outputId": "bc573c91-fe87-4b4c-a71c-70cf62ec45ae"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,7 +854,7 @@
         "id": "NH3pi3rhZZ8g",
         "outputId": "3e4e4976-b239-4e21-8262-6c73ded3615a"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -791,7 +877,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Trigonometric Operations"
+        "## Trigonometric Operations\n",
+        "- 간단하게 `sin`, `cos`, `tan` 등을 사용할 수 있음."
       ],
       "metadata": {
         "id": "L4NLF8z6Zce8"
@@ -831,7 +918,7 @@
         "id": "hK-2zysSZihL",
         "outputId": "ba055f52-4767-473b-aa28-751cd69dd3f3"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,7 +970,8 @@
         "- 특정 축에 대해 수행\n",
         "- axis: numpy, tensorflow\n",
         "- dim: pytorch\n",
-        "- Nan이 있는 경우 에러 발생"
+        "- Nan이 있는 경우 에러 발생\n",
+        "\n"
       ],
       "metadata": {
         "id": "jWphBfMGZ0Zh"
@@ -939,7 +1027,7 @@
         "id": "Nq7HZ1FMa2bd",
         "outputId": "e4b1911e-f767-47ae-8923-4e22b9c48cad"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1034,8 +1122,7 @@
         "c_t = ~bm0_t\n",
         "print(c_t)\n",
         "c_tf = ~bm0_tf\n",
-        "print(c_tf)\n",
-        ""
+        "print(c_tf)\n"
       ],
       "metadata": {
         "colab": {
@@ -1044,7 +1131,7 @@
         "id": "vfKIsEGlbYKL",
         "outputId": "967ef250-a202-41b2-c42f-6ef37c716911"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
