FEAT: add aggregation with axis

--- a/06-vectorized_operation.ipynb
+++ b/06-vectorized_operation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPy0kzWWkOF0uiCg1SZQgpv",
+      "authorship_tag": "ABX9TyPhjd2rpn5vOhLgL7073RgG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
         "id": "Spj4-udWJGBx"
       },
@@ -66,9 +66,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H2-s5BNZJ4QP",
-        "outputId": "383d0dd2-a2bb-4f6e-e385-4c7fcaa5d23d"
+        "outputId": "c3a19a05-5340-4ae2-a1e9-e89b65db9223"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,15 +113,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "32tDbs8jLBBC",
-        "outputId": "854cfce1-aa0a-47b5-d38b-9bd19a6fc6f4"
+        "outputId": "2f741871-d270-474d-f67a-34b6ce9d3a6f"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.00071 sec\n"
+            "0.00083 sec\n"
           ]
         }
       ]
@@ -145,15 +145,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s8a6SxQYLCNj",
-        "outputId": "e96fec3c-10ae-4149-d3f3-28f9aba0f23e"
+        "outputId": "b4dd86ff-bacb-4ed2-9f74-3cf59cf325d7"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.00014 sec\n"
+            "0.00018 sec\n"
           ]
         }
       ]
@@ -195,9 +195,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S_OOOiNvMZxN",
-        "outputId": "431adccd-b037-442f-8aff-7105075e79b2"
+        "outputId": "82a297fa-445c-4966-d53d-6591b56467ce"
       },
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,9 +227,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PZfLsUR5MhXw",
-        "outputId": "27d8de1c-04d2-4f3e-b4cd-69673dfac8c0"
+        "outputId": "a6f4dcd5-9dfe-4c4d-8bf6-3905f645b652"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,9 +266,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G-lY7SCnM6aI",
-        "outputId": "e2412855-d70b-46d7-cf41-85a0930f9d8a"
+        "outputId": "766c50b5-224b-4b3e-cc5f-4823d068dac7"
       },
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,9 +305,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "moqSX2ntM6gf",
-        "outputId": "137b2263-9291-4dd4-f8dc-f22633539ee9"
+        "outputId": "dc14409c-1127-4a98-8dd1-cd235a66b635"
       },
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,9 +344,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ORlL2reUM6kT",
-        "outputId": "c5425db5-7bcb-4ae9-b2bd-a8c9c78e5c57"
+        "outputId": "69411e44-028e-4d2c-ef25-b003a7ac320c"
       },
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,9 +383,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WLeC2fhdM6nh",
-        "outputId": "bb06c7a7-e93e-47bd-c5df-9c7de4a14792"
+        "outputId": "860b5194-b9b9-4800-c8cf-5436adb7a325"
       },
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,9 +458,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BY11ofhmNvA6",
-        "outputId": "bd9d1b13-0638-482e-d407-bfa7c6cf5062"
+        "outputId": "4cb62a8e-f057-48c2-fbe0-efbcf448f596"
       },
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,9 +498,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PqJrHvDNNvEQ",
-        "outputId": "33a7bd3d-deb3-4f7c-9bce-8eb5cf22efbf"
+        "outputId": "dc94df94-afdc-4255-a099-03630536981e"
       },
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,9 +562,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qzwIRFwZNvH_",
-        "outputId": "3fd9f550-6c47-4d39-92b6-2eff862c1bb6"
+        "outputId": "adeb441e-0763-473b-fa3b-2530f626f6c5"
       },
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -669,9 +669,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3MNnqyq5SQB0",
-        "outputId": "19b6c7f0-ccf6-448e-aab4-0d86d958dc92"
+        "outputId": "44fcb293-7176-4582-8baa-1c8760df6698"
       },
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -716,11 +716,11 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-27-bb1c3fd4992a>:2: RuntimeWarning: divide by zero encountered in log\n",
+            "<ipython-input-56-bb1c3fd4992a>:2: RuntimeWarning: divide by zero encountered in log\n",
             "  c = np.log(a)\n",
-            "<ipython-input-27-bb1c3fd4992a>:11: RuntimeWarning: divide by zero encountered in log2\n",
+            "<ipython-input-56-bb1c3fd4992a>:11: RuntimeWarning: divide by zero encountered in log2\n",
             "  c = np.log2(a)\n",
-            "<ipython-input-27-bb1c3fd4992a>:22: RuntimeWarning: divide by zero encountered in log10\n",
+            "<ipython-input-56-bb1c3fd4992a>:22: RuntimeWarning: divide by zero encountered in log10\n",
             "  c = np.log10(a)\n"
           ]
         }
@@ -750,9 +750,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "svLSD3idX02m",
-        "outputId": "ebe0fbb2-ee3f-4059-9801-4dc2f7d53580"
+        "outputId": "532e5017-9e05-4025-9e0b-02541f76f8fc"
       },
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -800,9 +800,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tIE_2WPBYH7o",
-        "outputId": "bc573c91-fe87-4b4c-a71c-70cf62ec45ae"
+        "outputId": "320d927f-d6f2-4a14-b725-4cac32939a22"
       },
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -852,9 +852,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NH3pi3rhZZ8g",
-        "outputId": "3e4e4976-b239-4e21-8262-6c73ded3615a"
+        "outputId": "557bbe8c-b1b4-435e-b8a8-f35a40b9be9a"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,9 +916,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hK-2zysSZihL",
-        "outputId": "ba055f52-4767-473b-aa28-751cd69dd3f3"
+        "outputId": "60b6dddc-666b-43e9-ea6b-848384cf9f92"
       },
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -967,10 +967,13 @@
       "cell_type": "markdown",
       "source": [
         "## Aggregation\n",
-        "- 특정 축에 대해 수행\n",
-        "- axis: numpy, tensorflow\n",
-        "- dim: pytorch\n",
+        "- max / min / sum / mean / median 등.\n",
         "- Nan이 있는 경우 에러 발생\n",
+        "- 특정 축에 대해 수행\n",
+        "  - axis: numpy, tensorflow\n",
+        "  - dim: pytorch\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -1025,9 +1028,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nq7HZ1FMa2bd",
-        "outputId": "e4b1911e-f767-47ae-8923-4e22b9c48cad"
+        "outputId": "eaaf4493-b2b6-4e3e-98c5-a9ee7c5f02f5"
       },
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -1058,6 +1061,134 @@
             "[2. 3.]\n",
             "tensor([2., 3.])\n",
             "tf.Tensor([2. 3.], shape=(2,), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a, end=\"\\n\\n\")\n",
+        "\n",
+        "print(\"\\nmax\")\n",
+        "print(np.max(a, axis=0))\n",
+        "print(np.max(a, axis=1))\n",
+        "\n",
+        "print(torch.max(a_t, dim=0))\n",
+        "print(torch.max(a_t, dim=1))\n",
+        "\n",
+        "print(tf.reduce_max(a_tf, axis=0))\n",
+        "print(tf.reduce_max(a_tf, axis=1))\n",
+        "\n",
+        "print(\"\\nmin\")\n",
+        "print(np.min(a, axis=0))\n",
+        "print(np.min(a, axis=1))\n",
+        "\n",
+        "print(torch.min(a_t, dim=0))\n",
+        "print(torch.min(a_t, dim=1))\n",
+        "\n",
+        "print(tf.reduce_min(a_tf, axis=0))\n",
+        "print(tf.reduce_min(a_tf, axis=1))\n",
+        "\n",
+        "print(\"\\nsum\")\n",
+        "print(np.sum(a, axis=0))\n",
+        "print(np.sum(a, axis=1))\n",
+        "\n",
+        "print(torch.sum(a_t, dim=0))\n",
+        "print(torch.sum(a_t, dim=1))\n",
+        "\n",
+        "print(tf.reduce_sum(a_tf, axis=0))\n",
+        "print(tf.reduce_sum(a_tf, axis=1))\n",
+        "\n",
+        "print('\\nmean')\n",
+        "print(np.mean(a, axis=0))\n",
+        "print(np.mean(a, axis=1))\n",
+        "\n",
+        "print(torch.mean(a_t, dim=0))\n",
+        "print(torch.mean(a_t, dim=1))\n",
+        "\n",
+        "print(tf.reduce_mean(a_tf, axis=0))\n",
+        "print(tf.reduce_mean(a_tf, axis=1))\n",
+        "\n",
+        "print('\\nmedian')\n",
+        "print(np.median(a, axis=0))\n",
+        "print(np.median(a, axis=1))\n",
+        "\n",
+        "print(torch.median(a_t, dim=0))\n",
+        "print(torch.median(a_t, dim=1))\n",
+        "\n",
+        "print(tf.math.reduce_mean(a_tf, axis=0))\n",
+        "print(tf.math.reduce_mean(a_tf, axis=1))"
+      ],
+      "metadata": {
+        "id": "7yQkT0eG6acU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f0f9d17b-8036-4b19-d149-caba38524c04"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0. 1.]\n",
+            " [2. 3.]\n",
+            " [4. 5.]]\n",
+            "\n",
+            "\n",
+            "max\n",
+            "[4. 5.]\n",
+            "[1. 3. 5.]\n",
+            "torch.return_types.max(\n",
+            "values=tensor([4., 5.]),\n",
+            "indices=tensor([2, 2]))\n",
+            "torch.return_types.max(\n",
+            "values=tensor([1., 3., 5.]),\n",
+            "indices=tensor([1, 1, 1]))\n",
+            "tf.Tensor([4. 5.], shape=(2,), dtype=float32)\n",
+            "tf.Tensor([1. 3. 5.], shape=(3,), dtype=float32)\n",
+            "\n",
+            "min\n",
+            "[0. 1.]\n",
+            "[0. 2. 4.]\n",
+            "torch.return_types.min(\n",
+            "values=tensor([0., 1.]),\n",
+            "indices=tensor([0, 0]))\n",
+            "torch.return_types.min(\n",
+            "values=tensor([0., 2., 4.]),\n",
+            "indices=tensor([0, 0, 0]))\n",
+            "tf.Tensor([0. 1.], shape=(2,), dtype=float32)\n",
+            "tf.Tensor([0. 2. 4.], shape=(3,), dtype=float32)\n",
+            "\n",
+            "sum\n",
+            "[6. 9.]\n",
+            "[1. 5. 9.]\n",
+            "tensor([6., 9.])\n",
+            "tensor([1., 5., 9.])\n",
+            "tf.Tensor([6. 9.], shape=(2,), dtype=float32)\n",
+            "tf.Tensor([1. 5. 9.], shape=(3,), dtype=float32)\n",
+            "\n",
+            "mean\n",
+            "[2. 3.]\n",
+            "[0.5 2.5 4.5]\n",
+            "tensor([2., 3.])\n",
+            "tensor([0.5000, 2.5000, 4.5000])\n",
+            "tf.Tensor([2. 3.], shape=(2,), dtype=float32)\n",
+            "tf.Tensor([0.5 2.5 4.5], shape=(3,), dtype=float32)\n",
+            "\n",
+            "median\n",
+            "[2. 3.]\n",
+            "[0.5 2.5 4.5]\n",
+            "torch.return_types.median(\n",
+            "values=tensor([2., 3.]),\n",
+            "indices=tensor([1, 1]))\n",
+            "torch.return_types.median(\n",
+            "values=tensor([0., 2., 4.]),\n",
+            "indices=tensor([0, 0, 0]))\n",
+            "tf.Tensor([2. 3.], shape=(2,), dtype=float32)\n",
+            "tf.Tensor([0.5 2.5 4.5], shape=(3,), dtype=float32)\n"
           ]
         }
       ]
@@ -1129,9 +1260,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vfKIsEGlbYKL",
-        "outputId": "967ef250-a202-41b2-c42f-6ef37c716911"
+        "outputId": "3cca629d-4116-4706-b527-d130c36fb8d7"
       },
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
