--- a/07-broadcasting.ipynb
+++ b/07-broadcasting.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSP0jFSs/MJxDc3uyaAZ2A",
+      "authorship_tag": "ABX9TyPlFMK60eTkGfYta+1zkrfo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "RbYIEFf8cL5-"
       },
@@ -62,9 +62,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zSpXRGK6cpc7",
-        "outputId": "9456735d-8cf8-4fc8-fae5-5ba34366551d"
+        "outputId": "00c0d562-793c-448a-bafa-e2ffc505d8e7"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,9 +87,11 @@
         "- A의 shape가 (3,4,1) 이고, B의 shape가 (1,2)이면,\n",
         "- B가 2차원(ndim=2)이므로 3차원(ndim=3)으로 늘어나고,\n",
         "- leading side(왼쪽)로 1로 padding된 shape가 됨.\n",
+        "- **B는 (1,2)에서 (1,1,2)가 되고**\n",
+        "- 1차원인 부분이 확장되면서 최종 행렬은 (3,4,2)가 됨.\n",
         "\n",
-        "**B는 (1,2)에서 (1,1,2)이 됨.**\n",
-        "\n"
+        "이 경우 길이가 1인 차원이 포함되지 않았더라도 padding된 이후에 나머지 차원의 크기가 맞으면 성립함.\n",
+        "- (3,2,4) 행렬과 (2,4) 행렬 -> 연산 가능\n"
       ],
       "metadata": {
         "id": "Ee63Yp9TfcBw"
@@ -104,6 +106,7 @@
         "print(\"a\\n\", a)\n",
         "print(\"b\\n\", b)\n",
         "c = a+b\n",
+        "print(\"b\\n\", c)\n",
         "print(c.shape, end='\\n\\n')\n",
         "\n",
         "# torch\n",
@@ -123,9 +126,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YtCZ-iGNgMCx",
-        "outputId": "92826dce-0174-46be-adf2-91cab827681b"
+        "outputId": "7445a242-4085-428f-a773-f904f56bf78b"
       },
-      "execution_count": 27,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,12 +151,62 @@
             "  [1.]]]\n",
             "b\n",
             " [[1. 1.]]\n",
+            "b\n",
+            " [[[2. 2.]\n",
+            "  [2. 2.]\n",
+            "  [2. 2.]\n",
+            "  [2. 2.]]\n",
+            "\n",
+            " [[2. 2.]\n",
+            "  [2. 2.]\n",
+            "  [2. 2.]\n",
+            "  [2. 2.]]\n",
+            "\n",
+            " [[2. 2.]\n",
+            "  [2. 2.]\n",
+            "  [2. 2.]\n",
+            "  [2. 2.]]]\n",
             "(3, 4, 2)\n",
             "\n",
             "torch.Size([3, 4, 2])\n",
             "\n",
             "(3, 4, 2)\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = np.ones((3, 2, 4))\n",
+        "b = np.ones((2, 4))\n",
+        "a+b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3gEef4fECaKd",
+        "outputId": "2ee0dd5f-60cb-48b7-e9df-b3f0b5d490e4"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[2., 2., 2., 2.],\n",
+              "        [2., 2., 2., 2.]],\n",
+              "\n",
+              "       [[2., 2., 2., 2.],\n",
+              "        [2., 2., 2., 2.]],\n",
+              "\n",
+              "       [[2., 2., 2., 2.],\n",
+              "        [2., 2., 2., 2.]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
         }
       ]
     },
@@ -165,7 +218,7 @@
         "**ndarray 각각에서 shape가 1인 차원이 상대방의 해당하는 차원의 shape로 변경됨.**\n",
         "\n",
         "A의 shape가 (3,4,1) 이고, B의 shape가 (1,1,2)이면\n",
-        "- A의 첫번째 차원의 shape수인 3에 맞춰 B의 첫번째 차원의 shape도 3이 됨.\n",
+        "- A의 첫번째 차원의 shape 수인 3에 맞춰 B의 첫번째 차원의 shape도 3이 됨.\n",
         "- 두번째 차원의 경우, A의 4에 맞춰 B도 4로 늘어남.\n",
         "- 세번째 차원의 경우 B의 2에 맞춰 A의 1이 2로 늘어남."
       ],
@@ -186,9 +239,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2TmpbFfAkQyD",
-        "outputId": "eb8dc35b-9bc0-4bb8-8d00-6fc006668ea8"
+        "outputId": "a487299d-b07a-4c14-fd52-c734850c1f27"
       },
-      "execution_count": 29,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,9 +285,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K4PMO5yzhLHT",
-        "outputId": "63df2b9c-c601-4683-875a-3f39d13d0c41"
+        "outputId": "d31f5183-a1ec-4691-b28b-47101cb1719d"
       },
-      "execution_count": 32,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,14 +331,35 @@
         "m2 = torch.FloatTensor([[3], [4]])\n",
         "print(m1)\n",
         "print(m2)\n",
-        "print(m1+m2)\n",
-        ""
+        "print(m1+m2)\n"
       ],
       "metadata": {
-        "id": "FcFJG-zhd3dg"
+        "id": "FcFJG-zhd3dg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b196dfb5-2552-498c-8a81-7dea05d05b26"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[5., 5.]])\n",
+            "\n",
+            "tensor([[1., 2.]])\n",
+            "tensor([3.])\n",
+            "tensor([[4., 5.]])\n",
+            "\n",
+            "tensor([[1., 2.]])\n",
+            "tensor([[3.],\n",
+            "        [4.]])\n",
+            "tensor([[4., 5.],\n",
+            "        [5., 6.]])\n"
+          ]
+        }
+      ]
     }
   ]
 }
